--- a/KOGRankCalc/KOGRankCalc.csproj
+++ b/KOGRankCalc/KOGRankCalc.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Player.cs" />
+    <Compile Include="Ranking.cs" />
     <Compile Include="src\dataset\FileNameDataSet.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -56,12 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\engine\EngineException.cs" />
-    <Compile Include="src\engine\Participant.cs" />
-    <Compile Include="src\engine\ParticipantService.cs" />
-    <Compile Include="src\engine\Rank.cs" />
-    <Compile Include="src\engine\RegistrationService.cs" />
-    <Compile Include="src\engine\Result.cs" />
-    <Compile Include="src\engine\ResultService.cs" />
+    <Compile Include="Result.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
